--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <p>Estes projetos são exemplos de utilização da nova API de websocket do JEE7.</p>
 
-<p>Os objetos WebSocket dos projetos têm uma referência do tipo:
-ws = new WebSocket("ws://localhost:9080/BatePapoWebSocket/sala");
+<p>Os objetos WebSocket dos projetos têm uma referência do tipo:<br>
+ws = new WebSocket("ws://localhost:9080/BatePapoWebSocket/sala");<br>
 Altere para a porta do seu servidor.</p>
       </section>
     </div>
